# docgrab

./: .gitignore  LICENSE  README.md  pyproject.toml
src/doc_grab/: __init__.py  __main__.py  cli.py  fetch.py  interactive.py  search.py  serve.py  store.py  web_index.py
