[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-grab"
version = "0.2.0"
description = "Fetch and manage documentation from any website"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["documentation", "docs", "fetch", "offline", "mcp"]
authors = [{name = "Kandar Team", email = "team@kandar.io"}]

dependencies = [
    "click>=8.1.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "urllib3>=2.0.0",
    "playwright>=1.40.0",
]

[project.optional-dependencies]
js = ["playwright>=1.40.0"]

[project.scripts]
doc-grab = "doc_grab.cli:cli"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
